Fix overflow.

--- a/src/style/front-page.css
+++ b/src/style/front-page.css
@@ -63,6 +63,7 @@ section.headings {
 
 				& .javascript.codecolorer {
 					color: var(--primary-color);
+					overflow-y: auto;
 
 					& i {
 						color: var(--white);
